<resources>
	<string name="app_name">OOB设备测试工具</string>
	<string name="VibrationTitle">Vibration Test</string>
	<string name="VibrationContent">Please judge that if the equipment is vibrating
	</string>
	<string name="devicetest">Device Test</string>
	<string name="stresstest">Stress Test</string>
    <string name="SpeakerTitle">扬声器测试</string>
	 <string name="SpeakerContent">是否听到声音?</string>
	 <string name="Left">左</string>
	 <string name="Right">右</string>
	 <string name="SpeakerTip">左：男, 右:女</string>
    <string name="LeftMsg">左：你听到几次重复的声音？\n 请按下面的按钮。</string>
    <string name="RightMsg">右：你听到几次重复的声音？\n 请按下面的按钮。</string>
    	<string name="BrightnessTitle">背光测试</string>
	<string name="BrightnessTitleStop">停止背光测试</string>
	<string name="BrightnessSubTitle">请观察背光的变化</string>
	<string name="BrightnessPassCode">通过数字:</string>
	<string name="BrightnessMessage">请按屏幕刚才显示的数字！</string>
	<string name="BluetoothTitle">蓝牙测试</string>
	<string name="BluetoothSubTitle">请察看设备</string>
	<string name="BluetoothAdapterFail">获取适配器失败!</string>
	<string name="BluetoothScan">搜索设备...</string>
	<string name="BluetoothInit">请等待设备初始化.</string>
	<string name="BluetoothOpenF">打开蓝牙失败！</string>
	<string name="BluetoothFindF">查找设备失败.</string>
	<string name="BluetoothFindS">找到设备....\n 通过!</string>
	<string name="CameraTitle">摄像头测试</string>
	<string name="CameratextMsgText">请点击屏幕打开摄像头</string>
	<string name="GpsTestTitle">Gps C/No 测试</string>
	<string name="GpsTestSubTitle">请察看设备</string>
	<string name="GpsTestResult">请等待设备初始化</string>
	<string name="GpsLocationTestTitle">Gps位置测试 </string>
	<string name="GpsLocationTestSubTitle">请观察设备</string>
	<string name="GpsLocationTestResult">请等待设备初始化</string>
	<string name="gpstextx">X axis C/No:</string>
	<string name="gpstexty">Y axis C/No:</string>
	<string name="gpstestx">Test X axis</string>
	<string name="gpstesty">Test Y axis</string>
	<string name="HeadsetMicTitle">耳机麦克风测试</string>
	<string name="HeadsetMicSubTitle">请对着耳麦说话，然后用耳机听回放</string>
	<string name="HeadsetMicSubTitleForLenove">请对着耳机麦克风说话,音量要超过下面指针1/3偏转</string>
	<string name="LcdTestTitle">显示屏测试</string>
	<string name="LcdTestStart">点击屏幕开始测试</string>
	<string name="PhoneMictTitle">麦克风测试</string>
	<string name="PhoneMicSubTitle">请说话，5秒后将回放你刚才说的内容</string>
	<string name="PhoneMicSubTitleForLenove">请对着麦克风说话,音量要超过下面指针1/3偏转</string>
	<string name="PhoneMicEffective">录音有效！</string>
	<string name="startRecord">开始录音</string>
	<string name="PowertestTitle">电池信息</string>
	<string name="PowertestSubTitle"> 电源测试</string>
	<string name="AcUnplug">未充电测试(unplug ac):</string>
	<string name="AcPlugin">充电测试(plug in ac):</string>
	<string name="ChargeState">电池状态</string>
	<string name="Voltage">电池电压:</string>
	<string name="Capacity">电池电量:</string>
	<string name="Plug">电池连接:</string>
	<string name="SdCardTitle">SD卡测试</string>
	<string name="SdCardSubTitle">请察看设备</string>
	<string name="SdCardFail">失败！找不到SD卡</string>
    <string name="SdCardFind">发现SD卡，容量大小： </string>
	<string name="TouchtestTitle">触摸测试</string>
	<string name="TouchtestSubTitle">请先做单点滑动测试，再做多点测试
	</string>
	<string name="VersionTitle">版本测试</string>
	<string name="Firmwareversion">固件版本:</string>
	<string name="Kernelversion">内核版本:</string>
	<string name="Basebandversion">基带版本:</string>
	<string name="Buildversion">产品版本:</string>
	<string name="VibrationTest">Vibration Test</string>
	<string name="Wifitest">无线测试</string>
	<string name="WifiSubText">请查看设备</string>
	<string name="WifiResultText">请等待设备初始化</string>
	<string name="WifiError">无线测试失败!</string>
	<string name="WifiFind">找到网络-</string>
	<string name="WifiTry">尝试连接到 </string>
	<string name="WifiConnect">已连接到 </string>
	<string name="WifiConnectErr">找不到一个可连接的路由！</string>
	<string name="WifiPing">Ping 测试 : </string>
	<string name="WifiHttp">Http 连接测试: </string>
	<string name="WifiSignal3">信号(强)</string>
    <string name="WifiSignal2">信号(中)</string>
    <string name="WifiSignal1">信号(弱)</string>
    <string name="WifiSignal0">信号(差)</string>
    	<string name="wififindtest">已经找到</string>
	<string name="SensorTest">感应器测试</string>
	<string name="num200">200</string>
	<string name="gsensorvalue">gsensor值: </string>
	<string name="Accelerometer">=== 加速仪 === </string>
	<string name="name_acc"> 名字:</string>
	<string name="vendor_acc"> 厂家:</string>
	<string name="version_acc">版本:</string>
	<string name="maxRange_acc">最大值:</string>
	<string name="resolution_acc">解析度:</string>
	<string name="power_acc">电源:</string>
	<string name="sensor_x">x:</string>
	<string name="sensor_y">y:</string>
	<string name="sensor_z">z:</string>
	<string name="Orientation">=== 方向 === </string>
	<string name="Azimuth"> 方位角:</string>
	<string name="Pitch"> Pitch:</string>
	<string name="Roll"> Roll:</string>
	<string name="Light">=== Light === </string>
	<string name="lightvalue">Light:</string>
	<string name="Proximity">=== Proximity === </string>
	<string name="Magnetic_Field">=== Magnetic_Field === </string>
	<string name="Temperature">=== Temperature === </string>
		<string name="Gsensor_x">x轴朝上(x:9,y:0,z:0)</string>
	<string name="Gsensor_y">y轴朝上(x:0,y:9,z:0)</string>
	<string name="Gsensor_z">z轴朝上(x:0,y:0,z:9)</string>
	<string name="GsensorTest">重力感应测试</string>
	<string name="MsensorTest">磁感应测试</string>
	<string name="LightsensorTest">光感应测试</string>
	<string name="KeyboardTestTitle">按键测试</string>
	<string name="KeyboardTestSubTitle">请测试所有按键</string>
	<string name="VolUp">Vol+</string>
	<string name="VolDown">Vol-</string>
	<string name="Back">Back</string>
	<string name="Menu">Menu</string>
	<string name="Home">Home</string>
	<string name="FlashLightTest">FlashLight Test</string>
	<string name="FlashLightTestSubText">Please observe the flashlight of your device when
		you touch the buttons</string>
	<string name="OpenFlashLight">Open Flash Light</string>
	<string name="ShutDownFlashLight">Shut Down Flash Light</string>
	<string name="SimCardTestTitle">Sim Card Test</string>
	<string name="MrioUSBTitle"> USB 测试</string>
	<string name="MrioUSBsubTitle">请插入USB并稍等</string>
	<string name="usbplugin1">插入USB1:</string>
	<string name="usbplugin2">插入USB2:</string>
	<string name="FMRadioTestTitle">收音机测试</string>
	<string name="FMRadioTextMsgText">请点击屏幕以打开收音机</string>
	<string name="CirTestTitle">Cir Test</string>
	<string name="CirSend">Send</string>
	<string name="CpuInfo">CPU info</string>
	<string name="MemInfo">MEM info</string>
	<string name="DmiInfo">DMI info</string>
	<string name="IrdaTestTitle">IrDA Test</string>
	<string name="SirSend">Sir Send</string>
	<string name="SirReceive">Sir Receive</string>
	<string name="SirTest">Sir Test</string>
	<string name="FirSend">Fir Send</string>
	<string name="FirReceive">Fir Receive</string>
	<string name="FirTest">Fir Test</string>
	<string name="InsertSdCard">请插入SD卡!</string>
	<string name="SdCardNospace">SD卡没有空间!</string>
<string name="RecordTest">录音测试</string>
	<string name="HeadsetRecodrSuccess">录音成功！开始回放.</string>
    <string name="RecordError">录音失败！</string>
	<string name="LedTestTitle">Led测试</string>
	<string name="Red">红</string>
	<string name="Green">绿</string>
	<string name="Blue">蓝</string>
		<string name="HdmiTestTitle">HDMI测试</string>
	<string name="HdmiNoInsert">请插入HDMI并点击屏幕开始测试！</string>
	<string name="HdmiPrepare">HDMI初始化... 请等待3秒左右.</string>
	<string name="HdmiResult">测试完成 \n屏幕能正常显示吗?</string>
	<string name="HdmiStart">开始测试!</string>
	<string name="HdmiStartFail">启动失败! 请确认HDMI是否插入.</string>
	<string name="StorageTestTitle">存储读写测试</string>
	<string name="StorageSDNoFind">SD卡路径未找到...\n</string>
	<string name="StorageSDCopyF">复制到SD卡失败!\n</string>
	<string name="StorageSDCopyS">复制到SD卡成功!\n</string>
	<string name="StorageUsbNoFind">Usb host路径未找到...\n</string>
	<string name="StorageUsbCopyF">复制到UbsHost 失败!\n</string>
	<string name="StorageUsbCopyS">复制到UbsHost 成功!\n</string>
	<string name="RuninTestTitle">Run In Test</string>
	<string name="stop">停止</string>
	<string name="start">开始</string>
	<string name="btnPassText">通过</string>
	<string name="btnFailText">失败</string>
	<string name="btnSkipText">返回</string>
	<string name="btnRetestText">重测</string>
	<string name="OKText">OK!</string>
	<string name="Cancel">关闭</string>
	<string name="Clear">清除</string>
	<string name="Uninstall">卸载</string>
	<string name="Send">发送日志</string>
	<string name="Recovery">恢复出厂设置</string>
	<string name="Shutdown">关机</string>
	<string name="Recovery_msg">确认恢复出厂设置?</string>
	<string name="Shutdown_msg">确认关机?</string>
	<string name="Run_runin">下次开机进入Runin测试。</string>
	<string name="Erase_sd">格式化 SD</string>
	<string name="success">成功</string>
	<string name="fail">失败</string>
	<string name="Version">V20111216_01</string>
	<string name="UsbHostTestTitle">Usb Host测试</string>
	<string name="Hardware">硬件 : </string>
	<string name="HostStorageState">存储状态 : </string>
	<string name="Writable">写测试 : </string>
	<string name="WriteData">写数据! </string>
	<string name="ReadData">读数据! </string>
	<string name="MakeDir">创建文件夹 </string>
	<string name="CreateFile">创建新文件 </string>
	<string name="FileDel">删除文件 </string>
	<string name="DirDel">删除文件夹 </string>
	<string name="Compare">文件比较 </string>
	<string name="HardwareSupport">硬件 : 支持. \n发现设备 : /dev/block/</string>
	<string name="HardwareNoSupport">硬件 : 找不到设备! \n请插入设备并等待5秒左右.</string>
	<string name="nand_flash">NAND flash</string>
	<string name="total_space">总存储空间</string>
	<string name="available_space">可用存储空间</string>
	<string name="internal_storage">Internal storage</string>
	<string name="nand_unavailable">Unavailable</string>
	<string name="read_only">\u0020(Read-only)</string>
	<string name="camera_switch">切换</string>
	<string name="SingleTest">单项测试</string>
	<string name="testall">测试选中的选项</string>
	<string name="nocamera">没有摄像头</string>
	<string name="code_function_test">983*70</string>
    <string name="code_self_test">987*0</string>
	<string name="secondtest_title">功能测试</string>
	<string name="product_info">生产信息</string>
	<string name="battery_info">电池信息</string>
	<string name="pad_test">平板测试</string>
	<string name="factory_reset">恢复出厂设置</string>
	<string name="cpu_title">CPU 信息:</string>
	<string name="memory_title">内存信息 :</string>
	<string name="storage_title">存储空间信息 :</string>
	<string name="send_sucess">日志发送成功!</string>
	<string name="send_fail">日志发送失败!</string>
	<string name="login_fail">连接FTP 失败!</string>
	<string name="send_sucess_and_recovery">发送log成功.</string>
	<string name="sending_log">请稍后,正在发送log到服务器...</string>
   <string name="reboot_title">重启测试</string>
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>
    <string name="btn_exit">退出</string>
    <string name="btn_setting">设置最大测试次数</string>
    <string name="btn_clear">清除设置</string>
    <string name="reboot_dialog_msg">确认开始重启测试？ 点击确定后将在5秒后开始.</string>
    <string name="reboot_dialog_title">重启</string>
    <string name="dialog_ok">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="reboot_countdown">系统重启倒数 : </string>
     <string name="reboot_time">已重启次数: </string>
    <string name="reboot_maxtime">最多重启次数: </string>
    <string name="not_setting">未设置</string>
     <string name="sleep_title">休眠唤醒测试</string>
    <string name="wake_string">唤醒亮屏时间 (s):</string>
    <string name="wake_set">设置</string>
     <string name="camera_title">相机开关测试</string>
    <string name="use_system">使用系统相机界面.</string>
    <string name="camera_set">设置</string>
    <string name="camera_maxtime">最大测试次数:</string>
      <string name="video_title">视频测试</string>
    <string name="video_path">视频路径 :</string>
    <string name="select_video">选择视频</string>
    <string name="delete_video">删除视频</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	 <string name="selectKeyboard">正在获取键盘类型.......</string>
</resources>