<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
     <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/camera_title"
        android:textSize="32sp" />
     
    <CheckBox 
        android:layout_below="@id/title"
        android:id="@+id/usesystem_CB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_system"/>
    
    <LinearLayout
        android:id="@+id/maxtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usesystem_CB"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/maxtime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_maxtime"
            android:textSize="20sp" />

        <Button
            android:id="@+id/maxtime_btn"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_set" />
    </LinearLayout>
     
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop" />
        
        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_exit" />
    </LinearLayout>
    
</RelativeLayout>