<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/secondtest_title"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/product_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_info"/>
        <Button
            android:id="@+id/battery_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/battery_info"/>
        <Button
            android:id="@+id/padtest_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pad_test"/>
        <Button
            android:id="@+id/factory_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/factory_reset"/>
        
    </LinearLayout>
    

</LinearLayout>