<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/cpu_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cpuinfo_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="10dip"
            android:textSize="22sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/memory_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/meminfo_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="10dip"
            android:textSize="22sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/storage_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="20dip"
            android:text="@string/nand_flash"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nand_total_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dip"
            android:layout_marginTop="10dip"
            android:text="@string/total_space"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/nand_avail_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dip"
            android:layout_marginTop="10dip"
            android:text="@string/available_space"
            android:textSize="22sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="20dip"
            android:text="@string/internal_storage"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/internal_avail_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dip"
            android:layout_marginTop="10dip"
            android:text="@string/available_space"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_Pass"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPassText" />

        <Button
            android:id="@+id/btn_Fail"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFailText" />

        <Button
            android:id="@+id/btn_Skip"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSkipText" />

        <Button
            android:id="@+id/btn_Retest"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRetestText" />
    </LinearLayout>

</RelativeLayout>