<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoTestActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/video_title"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/filePath_tv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/video_path"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/btns"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/filePath_tv"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/select_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/select_video" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/select_btn"
            android:text="@string/delete_video" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_exit" />
    </LinearLayout>

</RelativeLayout>